--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: pages-themes/minimal
+theme: jekyll-theme-minimal
 title: Análisis de Reviews de Steam
 description: Proyecto final de la asignatura de Cloud y Big Data del curso 2022/2023. En este proyecto analizaremos las reviews de videojuegos que se han escrito en Steam. En dicho análisis veremos que factores pueden influir a la hora de valorar juegos o motivaciones que tiene un usuario a realizar una reseña etc...
